Add min stability field in composer.json

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         }
     ],
     "licence": "MIT",
+    "minimum-stability": "dev",
     "bin": [
-        "./brainGames"
+        "./brain-games"
     ],
     "require": {}
 
