--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "licence": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "bin": [
         "./brain-games"
     ],
