Change composer. json

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         }
     ],
     "licence": "MIT",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "bin": [
         "./brain-games"
     ],
     "require": {}
-    
+
 }
