Change composer. json

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "licence": "MIT",
     "minimum-stability": "dev",
     "bin": [
-        "./brain-games"
+        "./bin/brain-games"
     ],
     "require": {}
 
