--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
     "bin": [
         "bin/brain-games"
     ],
-    "require": {}
+    "autoload": {
+        "files": ["src/cli.php"]
+    },
+    "require": {
+        "wp-cli/php-cli-tools": "*"
+    }
 
 }
