Add .travis.yml to project

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     ],
     "licence": "MIT",
     "minimum-stability": "dev",
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "bin": [
         "bin/brain-games"
     ],
@@ -17,6 +20,9 @@
     },
     "require": {
         "wp-cli/php-cli-tools": "*"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "*"
     }
 
 }
