--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "bin/brain-even"
     ],
     "autoload": {
-        "files": ["src/cli.php", "src/even.php"]
+        "files": ["src/cli.php", "src/even.php", "src/path_loader.php"]
     },
     "require": {
         "wp-cli/php-cli-tools": "*"
