--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
     },
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+        "bin/brain-calc"
     ],
     "autoload": {
-        "files": ["src/cli.php", "src/even.php"]
+        "files": ["src/cli.php", "src/even.php", "src/calc.php", "src/generator.php"]
     },
     "require": {
         "wp-cli/php-cli-tools": "*"
