--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "bin/brain-calc"
     ],
     "autoload": {
-        "files": ["src/cli.php", "src/even.php", "src/calc.php", "src/generator.php"]
+        "files": ["src/cli.php", "games/even.php", "games/calc.php", "src/generator.php"]
     },
     "require": {
         "wp-cli/php-cli-tools": "*"
