--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,15 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-progression"
     ],
     "autoload": {
         "files": ["src/cli.php",
                 "games/even.php",
                 "games/calc.php",
                 "games/gcd.php",
+                "games/progression.php",
                 "src/generator.php"]
     },
     "require": {
