--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
                 "src/games/calc.php",
                 "src/games/gcd.php",
                 "src/games/progression.php",
-                "src/games/prime.php",
-                "src/generator.php"]
+                "src/games/prime.php"]
     },
     "require": {
         "wp-cli/php-cli-tools": "*"
