Rename cli.php to engine.php and change namespace

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "bin/brain-progression"
     ],
     "autoload": {
-        "files": ["src/cli.php",
+        "files": ["src/engine.php",
             "src/games/even.php",
             "src/games/calc.php",
             "src/games/gcd.php",
