--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "wp-cli/php-cli-tools": "*"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.3"
+        "squizlabs/php_codesniffer": "*"
     }
 
 }
